--- a/src/main/resources/templates/mainpage/defaultandnew.html
+++ b/src/main/resources/templates/mainpage/defaultandnew.html
@@ -126,9 +126,39 @@
             </ul>
 
             <div class="card" id="tiezi" th:each="article,iterStat : ${articlesimpl}">
+
+                <div class="card-header">
+                    <span class="badge rounded-pill bg-primary" th:text="${article.getThemeName()}">分区</span>
+                </div>
                 <div class="card-body">
-                    <h5 class="card-title" th:text="${article.getArticletitle()}"></h5>
-                    <h6 class="card-subtitle mb-2 text-muted" th:text="${article.getArticleauthorid()}"></h6>
+                    <a th:text="${article.getArticletitle()}" class="h4 link-primary"
+                       th:href="@{http://localhost:8080/article/articlemore(articleid=${article.getArticleid()})}">文章标题</a>
+                    <table class="table table-borderless table-sm">
+                        <tbody>
+                        <tr>
+                            <td>
+                                <span class="badge rounded-pill bg-success">作者</span>
+                            </td>
+                            <td th:text="${article.getArticleauthoridImpl()}">
+
+                            </td>
+                            <td>
+                                <span class="badge rounded-pill bg-success">发布时间</span>
+                            </td>
+                            <td th:text="${article.getArticlePublishTimeImpl()}">
+
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="card-footer">
+                    <span class="bi-hand-thumbs-up"></span>
+                    <span class="badge bg-secondary" th:text="${article.getArticlethumb()}">14</span>
+                    <span class="bi-star"></span>
+                    <span class="badge bg-secondary" th:text="${article.getArticlecollect()}">30</span>
+                    <span class="bi-chat"></span>
+                    <span class="badge bg-secondary" th:text="${article.getArticlereplycount()}">5</span>
                 </div>
             </div>
 
