个人中心-帖子管理，并简化多标签页代码量

--- a/src/main/resources/templates/errorhandle.html
+++ b/src/main/resources/templates/errorhandle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>出错了</title>
+    <title>info</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <!-- 新 Bootstrap5 核心 CSS 文件 -->
