--- a/src/main/resources/templates/user/uarticle/userarticlesall.html
+++ b/src/main/resources/templates/user/uarticle/userarticlesall.html
@@ -36,19 +36,15 @@
     <!--  和风天气  -->
     <script src="https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0"></script>
 
-    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
-    <script src="https://cdn.bootcss.com/echarts/4.3.0/echarts.min.js"></script>
-
     <style>
         #mainpart{
             margin-top: 20px;
         }
-
     </style>
 
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="#">
             小山屋论坛</a>
@@ -75,7 +71,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="#"><span class="bi-people"></span> 反馈</a></li>
-                <li><a class="dropdown-item" href="#"><span class="bi-power"></span> 退出登录</a></li>
+                <li><a class="dropdown-item" href="/ind/logout"><span class="bi-power"></span> 退出登录</a></li>
             </ul>
         </div>
     </div>
@@ -119,14 +115,15 @@
         </div>
     </div>
 
+
     <div class="row">
         <div class="col-3">
             <h3>我的</h3>
             <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action active"
+                <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='/user/tousercenter'">
                     <span class="bi-journal-check"></span> 我的数据</button>
-                <button type="button" class="list-group-item list-group-item-action"
+                <button type="button" class="list-group-item list-group-item-action active"
                         onclick="window.location.href='/user/userallarticle'">
                     <span class="bi-card-text"></span> 我的帖子</button>
                 <button type="button" class="list-group-item list-group-item-action">
@@ -148,59 +145,90 @@
             </div>
         </div>
         <div class="col-9">
-            <h1><span class="bi-journal-check"></span> 我的数据</h1>
-            <div class="row">
-                <div class="col-sm-4">
-                    <h5 th:text="'文章总数：' + ${articlenum}"></h5>
-                    <div id="articletopicchart" style="width: 600px;height:400px;"></div>
-                    <input type="hidden" th:value="${theme01}" id="theme01">
-                    <input type="hidden" th:value="${theme0}" id="theme0">
-                    <input type="hidden" th:value="${theme1}" id="theme1">
-                    <input type="hidden" th:value="${themeo}" id="themeo">
-                </div>
+            <h1><span class="bi-card-text"></span> 我的帖子</h1>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a th:class="${tid==-1}?'nav-link active':'nav-link'"
+                       th:href="@{userallarticle}">全部</a>
+                </li>
+                <li class="nav-item">
+                    <a th:class="${tid==0}?'nav-link active':'nav-link'"
+                       th:href="@{userallarticle(themeid=0)}">编程</a>
+                </li>
+                <li class="nav-item">
+                    <a th:class="${tid==1}?'nav-link active':'nav-link'"
+                       th:href="@{userallarticle(themeid=1)}">求职招聘</a>
+                </li>
+                <li class="nav-item">
+                    <a th:class="${tid==2}?'nav-link active':'nav-link'"
+                       th:href="@{userallarticle(themeid=2)}">动漫</a>
+                </li>
+                <li class="nav-item">
+                    <a th:class="${tid==3}?'nav-link active':'nav-link'"
+                       th:href="@{userallarticle(themeid=3)}">游戏</a>
+                </li>
+                <li class="nav-item">
+                    <a th:class="${tid==4}?'nav-link active':'nav-link'"
+                       th:href="@{userallarticle(themeid=4)}">文学</a>
+                </li>
+            </ul>
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th>id</th>
+                    <th>标题</th>
+                    <th>主题</th>
+                    <th>发布时间</th>
+                    <th>修改时间</th>
+                    <th><span class="bi-hand-thumbs-up-fill"></span></th>
+                    <th><span class="bi-star"></span></th>
+                    <th><span class="bi-chat"></span></th>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="article,iterStat : ${articlesimpl}">
+                    <td th:text="${article.getArticleid()}"></td>
+                    <td th:text="${article.getArticletitle()}"></td>
+                    <td th:text="${article.getThemeName()}"></td>
+                    <td th:text="${article.getArticlePublishTimeImpl()}"></td>
+                    <td th:text="${article.getArticleChangeTimeImpl()}"></td>
+                    <td th:text="${article.getArticlethumb()}"></td>
+                    <td th:text="${article.getArticlecollect()}"></td>
+                    <td th:text="${article.getArticlereplycount()}"></td>
+                    <td>
+                        <button class="btn btn-info disabled">
+                            <span class="bi-gear"></span>
+                        </button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <div class="alert alert-info" role="alert" th:text="${'当前共有'+pages.getTotalElements()+'篇帖子，切换选项卡以查看不同主题下的帖子'}">
             </div>
+
+            <nav>
+                <ul class="pagination">
+                    <li th:each="i : ${#numbers.sequence(1,pages.getTotalPages())}"
+                        th:class="${pages.getNumber() + 1 != i}?'page-item':'page-item active'">
+                        <a class="page-link"
+                           th:href="@{userallarticle(page=${i},limit=${pages.getSize()},themeid=${tid})}"
+                           th:text="${i}">
+                            Previous</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
-
-<footer class="bd-footer p-3 p-md-5 mt-5 bg-light text-center text-sm-start">
-    <div class="container">
-        <ul class="bd-footer-links ps-0 mb-3">
-            <li class="d-inline-block" ><a href="https://github.com/bluebonnet27/xiaoshanwu">GitHub</a></li>
-        </ul>
-        <p class="mb-0">小山屋论坛 Copyright© 2022 All Rights Reserved. </p>
-        <p class="mb-0">当前版本 v0.1。</p>
-    </div>
-</footer>
+    <footer class="bd-footer p-3 p-md-5 mt-5 bg-light text-center text-sm-start">
+        <div class="container">
+            <ul class="bd-footer-links ps-0 mb-3">
+                <li class="d-inline-block" ><a href="https://github.com/bluebonnet27/xiaoshanwu">GitHub</a></li>
+            </ul>
+            <p class="mb-0">小山屋论坛 Copyright© 2022 All Rights Reserved. </p>
+            <p class="mb-0">当前版本 v0.1。</p>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
-<script type="text/javascript">
-    // 基于准备好的dom，初始化echarts实例
-    var articleThemeChart = echarts.init(document.getElementById('articletopicchart'));
-
-    var theme01=$("#theme01").val();
-    var theme0=$("#theme0").val();
-    var theme1=$("#theme1").val();
-    var themeo=$("#themeo").val();
-
-    // 指定图表的配置项和数据
-    var articleThemeoption = {
-        series : [
-            {
-                name: '访问来源',
-                type: 'pie',
-                radius: '55%',
-                roseType: 'angle',
-                data:[
-                    {value:theme01, name:'管理区'},
-                    {value:theme0, name:'编程'},
-                    {value:theme1, name:'求职招聘'},
-                    {value:themeo, name:'其他'},
-                ]
-            }
-        ]
-    };
-
-    // 使用刚指定的配置项和数据显示图表。
-    articleThemeChart.setOption(articleThemeoption);
-</script>
