修复按照时间排序失败的问题

--- a/src/main/resources/templates/admin/uuser/adminusermng.html
+++ b/src/main/resources/templates/admin/uuser/adminusermng.html
@@ -140,7 +140,7 @@
                     <a class="nav-link" href="allusershead">模块管理员</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">用户数据</a>
+                    <a class="nav-link" href="userdata">用户数据</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">其他</a>
